--- a/style.css
+++ b/style.css
@@ -172,3 +172,12 @@
     height: 840px;
     display: block;
 }
+.box {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
