--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
- .XPBsz {
+ .egvMye  , .XPBsz {
     
     font-size: 15px !important;
 }
