--- a/style.css
+++ b/style.css
@@ -202,6 +202,12 @@
     }
 }
 
+@media (max-width: 680px) {
+    .gZRRnH , .sojqq {
+        font-size: 20px !important;
+    }
+}
+
 .jRognm {
     border-radius: 5px;
     /* background-color: rgb(12, 58, 83); */
